# Arbitrary-precision-arithmetic

./: .clang-tidy  CMakeLists.txt  biginteger.cpp  biginteger.hpp  helper.hpp  main.cpp
test/: CMakeLists.txt  base_test.cpp
